<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:theme="@style/AppTheme"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/firstNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/firstNumberEditText"
        android:inputType="number|numberDecimal|numberSigned" />

    <EditText
        android:id="@+id/secondNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/secondNumberEditText"
        android:inputType="number|numberDecimal|numberSigned" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <RadioButton
            android:id="@+id/plusRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/plusRadioButton" />

        <RadioButton
            android:id="@+id/minusRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minusRadioButton" />

        <RadioButton
            android:id="@+id/divideRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/divideRadioButton" />

        <RadioButton
            android:id="@+id/multiplyRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiplyRadioButton" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/floatValues"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:checked="true"
        android:onClick="onClickValue"
        android:text="@string/floatValues" />

    <CheckBox
        android:id="@+id/signedValues"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:onClick="onClickValue"
        android:text="@string/signedValues" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/resultTextView"
        android:textSize="25sp" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="calculateButtonClick"
        android:text="@string/calculateButton" />

</LinearLayout>